--- a/.config/neofetch/config
+++ b/.config/neofetch/config
@@ -1,8 +1,11 @@
 #!/usr/bin/env bash
 # vim:fdm=marker
-#
-# Neofetch config file
-# https://github.com/dylanaraps/neofetch
+#                    __      _       _
+#  _ __   ___  ___  / _| ___| |_ ___| |__
+# | '_ \ / _ \/ _ \| |_ / _ \ __/ __| '_ \
+# | | | |  __/ (_) |  _|  __/ || (__| | | |
+# |_| |_|\___|\___/|_|  \___|\__\___|_| |_|
+# Ahmed's configuration file
 
 # Speed up script by not using unicode
 export LC_ALL=C
@@ -22,7 +25,6 @@ printinfo () {
     info "Packages" packages
     # info "Shell" shell
     # info "Resolution" resolution
-    # info line_break
 
     # info "DE" de
     info "WM" wm
@@ -37,7 +39,6 @@ printinfo () {
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
-    # info line_break
 
     info "CPU Usage" cpu_usage
     # info "Disk" disk
@@ -287,7 +288,7 @@ battery_display="off"
 disk_display="off"
 
 
-# Image Options {{{
+### Image Options
 
 # Image Source
 # --image wall, ascii, /path/to/img, /path/to/dir/, off
