--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,42 +1,43 @@
 ##############################
-#  _
-# | |_ _ __ ___  _   ___  __
-# | __| '_ ` _ \| | | \ \/ /
-# | |_| | | | | | |_| |>  <
-#  \__|_| |_| |_|\__,_/_/\_\
-#
+#  _____
+# |_   _| __ ___  _   ___  __
+#   | || '_ ` _ \| | | \ \/ /
+#   | || | | | | | |_| |>  <
+#   |_||_| |_| |_|\__,_/_/\_\
 #############################
+
+#########################################
+## Set Vaules ###########################
+#########################################
 # Use vim keybindings in copy mode
 #setw -g mode-keys vi
 
 set -s escape-time 02
 setw -g aggressive-resize on
 
-# list of plugin
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-online-status'
+# Start with index 1
+set -g base-index 1
+setw -g pane-base-index 1
 
-#set -g @online_icon "On"
-#set -g @offline_icon "Off"
-# Power line
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-fg colour136
-set-option -g status-bg colour235
-set-option -g status-justify "centre"
-set-option -g status-left-length 20
-set-option -g status-right-length 100
-set -g status-left '#[fg=green]#H | #[fg=whit e]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#{prefix_highlight} #{battery_percentage} | #{online_status} | #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
-set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+# Clock
+setw -g clock-mode-style 24
 
-#mute powerline
-bind C-[ run '~/path/to/tmux-powerline/mute_powerline.sh left'		# Mute left statusbar.
-bind C-] run '~/path/to/tmux-powerline/mute_powerline.sh right'		# Mute right statusbar.
+# Mouse on/off
+set -g mouse off
+
+# Set new prefix
+# Note : you can press super key by set M.
+# (tested with tty only)
+set -g prefix C-a
+bind-key Space send-prefix
+
+#########################################
+## Keybind ##############################
+#########################################
 # First remove *all* keybindings
 unbind-key -a
 
@@ -52,24 +53,8 @@ bind-key ] paste-buffer
 # Refresh client
 bind-key r refresh-client \; display-message "Refresh already"
 
-# Start with index 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-# Set new prefix
-# Note : you can press super key by set M.
-# (tested with tty only)
-set -g prefix C-a
-bind-key Space send-prefix
-
-# Clock
-setw -g clock-mode-style 24
-
 # Config Reloads
 bind R source-file ~/.tmux.conf \; display-message "Config reloaded"
-
-# Mouse on/off
-set -g mouse off
 
 # Split window
 bind-key h split-window -h
@@ -94,9 +79,6 @@ bind-key -r k resize-pane -D 5 \; display-message "Resize down"
 bind-key -r l resize-pane -U 5 \; display-message "Resize up"
 bind-key -r \; resize-pane -R 5 \; display-message "Resize right"
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
 
 # Choose Window
 bind-key w choose-window
