--- a/.config/neofetch/config
+++ b/.config/neofetch/config
@@ -1,5 +1,4 @@
 #!/usr/bin/env bash
-# vim:fdm=marker
 #                    __      _       _
 #  _ __   ___  ___  / _| ___| |_ ___| |__
 # | '_ \ / _ \/ _ \| |_ / _ \ __/ __| '_ \
@@ -21,16 +20,9 @@ printinfo () {
 
     info "OS" distro
     info "Kernel" kernel
-    # info "Uptime" uptime
     info "Packages" packages
-    # info "Shell" shell
-    # info "Resolution" resolution
 
-    # info "DE" de
     info "WM" wm
-    # info "WM Theme" wmtheme
-    # info "Theme" theme
-    # info "Icons" icons
     info "Terminal" term
     info "Terminal Font" termfont
     info line_break
@@ -39,49 +31,30 @@ printinfo () {
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
-
     info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # info "Local IP" localip
-    # info "Public IP" publicip
-    # info "Users" users
-    # info "Birthday" birthday
-
-    # info linebreak
-    # info cols
 }
 
 
-# Kernel
-
+## Kernel
 # Show more kernel info
 # --kernel_shorthand on/off
 kernel_shorthand="on"
 
-
-# Distro
-
+## Distro
 # Shorten the output of distro (tiny, on, off)
 # NOTE: This is only possible on Linux
-distro_shorthand="off"
+distro_shorthand="on"
 
 # Show 'x86_64' and 'x86' in 'Distro:' output.
 # --os_arch on/off
-os_arch="on"
+os_arch="off"
 
-
-# Uptime
-
+## Uptime
 # Shorten the output of the uptime function
 # --uptime_shorthand tiny, on, off
 uptime_shorthand="off"
 
-
-# Shell
-
+## Shell
 # Show the path to $SHELL
 # --shell_path on/off
 shell_path="off"
@@ -91,15 +64,14 @@ shell_path="off"
 shell_version="off"
 
 
-# CPU
-
+## CPU
 # CPU speed type
 # Only works on Linux with cpufreq.
 # --speed_type current, min, max, bios,
 # scaling_current, scaling_min, scaling_max
 speed_type="max"
 
-# CPU Shorthand
+## CPU Shorthand
 # Set shorthand setting
 # --cpu_shorthand name, speed, tiny, on, off
 cpu_shorthand="on"
