--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,9 +15,9 @@
 set -s escape-time 02
 setw -g aggressive-resize on
 
-# Start with index 1
-set -g base-index 1
-setw -g pane-base-index 1
+# Start with index 0
+set -g base-index 0
+setw -g pane-base-index 0
 
 # Automatically set window title
 set-window-option -g automatic-rename on
@@ -34,6 +34,9 @@ set -g mouse off
 # (tested with tty only)
 set -g prefix C-a
 bind-key Space send-prefix
+
+# still open if terminal close
+set -g set-remain-on-exit on
 
 #########################################
 ## Keybind ##############################
@@ -106,19 +109,16 @@ bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 bind-key -n M-0 select-window -t 10
 
-# Change current pane to next window
-bind-key ! join-pane -t :1
-bind-key @ join-pane -t :2
-bind-key '#' join-pane -t :3
-bind-key '$' join-pane -t :4
-bind-key '%' join-pane -t :5
-bind-key '^' join-pane -t :6
-bind-key '&' join-pane -t :7
-bind-key '*' join-pane -t :8
-bind-key '(' join-pane -t :9
-bind-key ')' join-pane -t :10
-
 # Kill Selected Pane
 bind-key Q kill-pane
+
+#########################################
+## Layout ##############################
+#########################################
+new-session -d -n def clear
+new-window -n Info
+new-window -n Shell
+new-window -n Ranger ranger
+selectw -t 2
 
 run '~/.tmux/plugins/tpm/tpm'
