--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ setw -g pane-base-index 0
 
 # Automatically set window title
 set-window-option -g automatic-rename on
-set-option -g set-titles on
+#set-option -g set-titles on
 
 # Clock
 setw -g clock-mode-style 24
@@ -44,6 +44,7 @@ set -g set-remain-on-exit on
 # First remove *all* keybindings
 unbind-key -a
 
+# ••••• ASM like comments
 bind-key ? list-keys                                                 # List keys
 bind-key [ copy-mode                                                 # Copy mode
 bind-key ] paste-buffer                                              # Paste buffer
@@ -52,10 +53,8 @@ bind R source-file ~/.tmux.conf \; display-message "Config reloaded" # Config Re
 bind-key -n C-o rotate-window                                        # Rotate Window
 bind-key w choose-window                                             # Choose Window
 bind-key Q kill-pane                                                 # Kill Selected Pane
-
-# Split window
-bind-key h split-window -h
-bind-key v split-window -v
+bind-key h split-window -h                                           # Split hori
+bind-key v split-window -v                                           # Split Vert
 
 # Swap pane
 bind-key -r L swap-pane -U
@@ -86,16 +85,16 @@ bind-key 9 new-window -t 9
 bind-key 0 new-window -t 10
 
 # Switch windows alt+number
-bind-key -n M-1 select-window -t 1
-bind-key -n M-2 select-window -t 2
-bind-key -n M-3 select-window -t 3
-bind-key -n M-4 select-window -t 4
-bind-key -n M-5 select-window -t 5
-bind-key -n M-6 select-window -t 6
-bind-key -n M-7 select-window -t 7
-bind-key -n M-8 select-window -t 8
-bind-key -n M-9 select-window -t 9
-bind-key -n M-0 select-window -t 10
+bind-key -n M-q select-window -t 1
+bind-key -n M-w select-window -t 2
+bind-key -n M-e select-window -t 3
+bind-key -n M-r select-window -t 4
+bind-key -n M-t select-window -t 5
+bind-key -n M-y select-window -t 6
+bind-key -n M-u select-window -t 7
+bind-key -n M-i select-window -t 8
+bind-key -n M-o select-window -t 9
+bind-key -n M-p select-window -t 10
 
 #########################################
 ## Layout #################Z#############
