--- a/.config/neofetch/config
+++ b/.config/neofetch/config
@@ -20,6 +20,7 @@ printinfo () {
 
     info "OS" distro
     info "Kernel" kernel
+    info "Shell" shell
     info "Packages" packages
 
     info "WM" wm
@@ -61,7 +62,7 @@ shell_path="off"
 
 # Show $SHELL's version
 # --shell_version on/off
-shell_version="off"
+shell_version="on"
 
 
 ## CPU
