--- a/.mkshrc
+++ b/.mkshrc
@@ -13,7 +13,33 @@
 
 
 # ––– •Style START here• –––
-PS1='$(/home/master/bin/pwr)'
+#PS1='$(/home/master/bin/pwr)'
+#PS1='$(/home/master/bin/slcp $COLUMNS $?)'
+PRINT='echo -n'
+[ `$PRINT | wc -c` -ne 0 ] && PRINT=printf
+PS1='$(_prompt) '
+
+_prompt() {
+	  case $? in
+	      # EXIT_SUCCESS or ^C
+	      0|130)
+		        RET=240
+		        ;;
+	      # command not found
+	      127)
+		        RET=196
+		        ;;
+	      *)
+		        RET=202
+		        ;;
+	  esac
+
+	  RET="[38;5;${RET}m"
+	  RET="${RET}─[0m "
+
+	  $PRINT $RET
+}
+
 # ––– •Style END here• –––
 
 # ––– •Export START here• –––
