Add Okular config and other Updare

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -153,7 +153,8 @@ ext pdf, has okular,   X, flag f = okular -- "$@"
 ext pdf, has epdfview, X, flag f = epdfview -- "$@"
 ext pdf, has qpdfview, X, flag f = qpdfview "$@"
 
-ext epub, has mupdf, X, flag f = mupdf "$@"
+ext epub, has mupdf,  X, flag f = mupdf "$@"
+ext epub, has okular, X, flag f = okular "$@"
 
 ext docx, has abiword, X, flag f = abiword "$@"
 ext docx, has pandoc, X, flag f = pandoc -f docx -t rst "$@"  | vim -
