--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -169,7 +169,7 @@ oftc.sasl_password
 oftc.sasl_key
 oftc.sasl_timeout
 oftc.sasl_fail
-oftc.autoconnect
+oftc.autoconnect = on
 oftc.autoreconnect
 oftc.autoreconnect_delay
 oftc.nicks = "Ahmedkh"
@@ -178,7 +178,7 @@ oftc.username
 oftc.realname
 oftc.local_hostname
 oftc.usermode
-oftc.command
+oftc.command = "/msg NickServ IDENTIFY 123ahmed123"
 oftc.command_delay
 oftc.autojoin
 oftc.autorejoin
@@ -193,3 +193,126 @@ oftc.msg_part
 oftc.msg_quit
 oftc.notify
 oftc.split_msg_max_length
+freenode.addresses = "chat.freenode.net"
+freenode.proxy
+freenode.ipv6
+freenode.ssl
+freenode.ssl_cert
+freenode.ssl_priorities
+freenode.ssl_dhkey_size
+freenode.ssl_fingerprint
+freenode.ssl_verify
+freenode.password
+freenode.capabilities
+freenode.sasl_mechanism
+freenode.sasl_username
+freenode.sasl_password
+freenode.sasl_key
+freenode.sasl_timeout
+freenode.sasl_fail
+freenode.autoconnect = on
+freenode.autoreconnect
+freenode.autoreconnect_delay
+freenode.nicks
+freenode.nicks_alternate
+freenode.username
+freenode.realname
+freenode.local_hostname
+freenode.usermode
+freenode.command
+freenode.command_delay
+freenode.autojoin
+freenode.autorejoin
+freenode.autorejoin_delay
+freenode.connection_timeout
+freenode.anti_flood_prio_high
+freenode.anti_flood_prio_low
+freenode.away_check
+freenode.away_check_max_nicks
+freenode.msg_kick
+freenode.msg_part
+freenode.msg_quit
+freenode.notify
+freenode.split_msg_max_length
+rizon.addresses = "irc.rizon.net"
+rizon.proxy
+rizon.ipv6
+rizon.ssl
+rizon.ssl_cert
+rizon.ssl_priorities
+rizon.ssl_dhkey_size
+rizon.ssl_fingerprint
+rizon.ssl_verify
+rizon.password
+rizon.capabilities
+rizon.sasl_mechanism
+rizon.sasl_username
+rizon.sasl_password
+rizon.sasl_key
+rizon.sasl_timeout
+rizon.sasl_fail
+rizon.autoconnect
+rizon.autoreconnect
+rizon.autoreconnect_delay
+rizon.nicks
+rizon.nicks_alternate
+rizon.username
+rizon.realname
+rizon.local_hostname
+rizon.usermode
+rizon.command = "/msg NickServ IDENTIFY 123ahmed123"
+rizon.command_delay
+rizon.autojoin
+rizon.autorejoin
+rizon.autorejoin_delay
+rizon.connection_timeout
+rizon.anti_flood_prio_high
+rizon.anti_flood_prio_low
+rizon.away_check
+rizon.away_check_max_nicks
+rizon.msg_kick
+rizon.msg_part
+rizon.msg_quit
+rizon.notify
+rizon.split_msg_max_length
+nix.addresses = "unix.chat/6697"
+nix.proxy
+nix.ipv6
+nix.ssl = on
+nix.ssl_cert
+nix.ssl_priorities
+nix.ssl_dhkey_size
+nix.ssl_fingerprint
+nix.ssl_verify
+nix.password
+nix.capabilities
+nix.sasl_mechanism
+nix.sasl_username
+nix.sasl_password
+nix.sasl_key
+nix.sasl_timeout
+nix.sasl_fail
+nix.autoconnect
+nix.autoreconnect
+nix.autoreconnect_delay
+nix.nicks
+nix.nicks_alternate
+nix.username
+nix.realname
+nix.local_hostname
+nix.usermode
+nix.command
+nix.command_delay
+nix.autojoin
+nix.autorejoin
+nix.autorejoin_delay
+nix.connection_timeout
+nix.anti_flood_prio_high
+nix.anti_flood_prio_low
+nix.away_check
+nix.away_check_max_nicks
+nix.msg_kick
+nix.msg_part
+nix.msg_quit
+nix.notify
+nix.split_msg_max_length
