--- a/.weechat/irc.conf
+++ b/.weechat/irc.conf
@@ -316,3 +316,44 @@ nix.msg_part
 nix.msg_quit
 nix.notify
 nix.split_msg_max_length
+syn.addresses = "irc.synirc.org"
+syn.proxy
+syn.ipv6
+syn.ssl
+syn.ssl_cert
+syn.ssl_priorities
+syn.ssl_dhkey_size
+syn.ssl_fingerprint
+syn.ssl_verify
+syn.password
+syn.capabilities
+syn.sasl_mechanism
+syn.sasl_username
+syn.sasl_password
+syn.sasl_key
+syn.sasl_timeout
+syn.sasl_fail
+syn.autoconnect
+syn.autoreconnect
+syn.autoreconnect_delay
+syn.nicks
+syn.nicks_alternate
+syn.username
+syn.realname
+syn.local_hostname
+syn.usermode
+syn.command
+syn.command_delay
+syn.autojoin
+syn.autorejoin
+syn.autorejoin_delay
+syn.connection_timeout
+syn.anti_flood_prio_high
+syn.anti_flood_prio_low
+syn.away_check
+syn.away_check_max_nicks
+syn.msg_kick
+syn.msg_part
+syn.msg_quit
+syn.notify
+syn.split_msg_max_length
