--- a/.elinks/elinks.conf
+++ b/.elinks/elinks.conf
@@ -79,3 +79,26 @@
   set ui.language = "System"
 
 
+
+
+
+##############################
+# Automatically saved options
+#
+
+## terminal 
+#  Terminal options.
+
+  ## terminal.xterm-256color 
+  #  Options specific to this terminal type (according to $TERM value).
+
+    ## terminal.xterm-256color.transparency [0|1]
+    set terminal.xterm-256color.transparency = 1
+
+  ## terminal.st-256color 
+  #  Options specific to this terminal type (according to $TERM value).
+
+    ## terminal.st-256color.transparency [0|1]
+    set terminal.st-256color.transparency = 1
+
+
