--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -75,31 +75,24 @@ alias travel     scout -aefiklst
 ###BASIC KEYS###
 
 #BASIC
-map     Q quit!
-map     q quit
-copymap q ZZ ZQ
-
-#map R     reload_cwd
-map <C-r> reset
-#map <C-l> redraw_window
-map <C-c> abort
-map <esc> change_mode normal
-
-map i display_file
-map ? help
 #map W display_log
-map w taskview_open
-map S shell $SHELL
-
-map :  console
-map ;  console
-map !  console shell%space
-map @  console -p6 shell  %s
-map #  console shell -p%space
 #map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
-map f  console find%space
-map cd console cd%space
+map   Q      quit!
+map   q      quit
+map   !      console shell%space
+map   :      console
+map   ;      console
+map   ?      help
+map   @      console -p6 shell  %s
+map   S      shell $SHELL
+map   cd     console cd%space
+map   f      console find%space
+map   i      display_file
+map   r      chain draw_possible_programs; console open_with%%space
+map   w      taskview_open
+map   <C-c>  abort
+map   <C-r>  reset
+map   <esc>  change_mode normal
 
 
 # Change the line mode
@@ -110,16 +103,13 @@ map cd console cd%space
 
 
 # Tagging / Marking
-map at      tag_toggle
-map ut      tag_remove
-# map "<any>  tag_toggle tag=%any
-map <Space> mark_files toggle=True
-map va       mark_files all=True toggle=True
-map uv      mark_files all=True val=False
-map vs       toggle_visual_mode
-map uV      toggle_visual_mode reverse=True
-
-
+map   at       tag_toggle
+map   ut       tag_remove
+map   <Space>  mark_files toggle=True
+map   va       mark_files all=True toggle=True
+map   uv       mark_files all=True val=False
+map   vs       toggle_visual_mode
+map   uV       toggle_visual_mode reverse=True
 
 # For the nostalgics: Midnight Commander bindings
 map <F1> help
@@ -132,36 +122,20 @@ map <F7> console mkdir%space
 map <F8> console delete
 map <F10> exit
 
-
-# In case you work on a keyboard with dvorak layout
-map <UP>       move up=1
-map <DOWN>     move down=1
-map <LEFT>     move left=1
-map <RIGHT>    move right=1
-map <HOME>     move to=0
-map <END>      move to=-1
-map <PAGEDOWN> move down=1   pages=True
-map <PAGEUP>   move up=1     pages=True
-map <CR>       move right=1
-map <DELETE>   console delete
-map <INSERT>   console touch%space
-
-
 # VIM-like
-copymap <UP>       k
-copymap <DOWN>     j
-copymap <LEFT>     h
-copymap <RIGHT>    l
-copymap <HOME>     gg
-copymap <END>      G
-copymap <PAGEDOWN> <C-F>
-copymap <PAGEUP>   <C-B>
+copymap  <UP>        k
+copymap  <DOWN>      j
+copymap  <LEFT>      h
+copymap  <RIGHT>     l
+copymap  <HOME>      gg
+copymap  <END>       G
+copymap  <PAGEDOWN>  <C-F>
+copymap  <PAGEUP>    <C-B>
 
-map J  move down=0.5  pages=True
-map K  move up=0.5    pages=True
-copymap J <C-D>
-copymap K <C-U>
-
+map       J  move down=0.5  pages=True
+map       K  move up=0.5    pages=True
+copymap   J  <C-D>
+copymap   K  <C-U>
 
 # Jumping around
 map H     history_go -1
@@ -171,33 +145,29 @@ map [     move_parent -1
 map }     traverse
 
 #DEFAULT MOVEMENT
-map ge cd /etc
-map gu cd /usr
-#map gl cd -r .
 #map gL cd -r %f
-#map gv cd /var
 #map gM cd /mnt
-map gh cd ~/
-map gd cd ~/Documents
-map gp cd ~/Pictures
-map gD cd ~/Downloads
-map gr cd /
-map gR eval fm.cd(ranger.RANGERDIR)
+#map gR eval fm.cd(ranger.RANGERDIR)
+#map ge cd /etc
+#map gl cd -r .
+#map gu cd /usr
+#map gv cd /var
 map g? cd /usr/share/doc/ranger
+map gD cd ~/Downloads
+map gd cd ~/Documents
+map gh cd ~/
+map gp cd ~/Pictures
+map gr cd /
+map gt cd /tmp
 
 # Tabs
+#map gT        tab_move -1
+#map gc        tab_close
+#map gt        tab_move 1
 map <C-n>     tab_new ~
 map <C-w>     tab_close
-map <TAB>     tab_move 1
 map <S-TAB>   tab_move -1
-map <A-Right> tab_move 1
-map <A-Left>  tab_move -1
-#map gt        tab_move 1
-#map gT        tab_move -1
-map gn        tab_new ~
-#map gc        tab_close
-map tt tab_close
-map uq        tab_restore
+map <TAB>     tab_move 1
 map <a-1>     tab_open 1
 map <a-2>     tab_open 2
 map <a-3>     tab_open 3
@@ -207,7 +177,9 @@ map <a-6>     tab_open 6
 map <a-7>     tab_open 7
 map <a-8>     tab_open 8
 map <a-9>     tab_open 9
-
+map  gn       tab_new ~
+map  tt       tab_close
+map  uq       tab_restore
 
 # External Programs
 map E  edit
@@ -217,21 +189,20 @@ map yp shell -f echo -n %%d/%%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %%d     | xsel -i; xsel -o | xsel -i -b
 map yn shell -f echo -n %%f     | xsel -i; xsel -o | xsel -i -b
 
-
 # Filesystem Operations
-map =  chmod
-map cw console rename%space
-map aa  rename_append
-map A  eval fm.open_console('rename ' + fm.thisfile.relative_path)
-map I  eval fm.open_console('rename ' + fm.thisfile.relative_path, position=7)
-map pp paste
-map po paste overwrite=True
-map pP paste append=True
-map pO paste overwrite=True append=True
-map pl paste_symlink relative=False
-map pL paste_symlink relative=True
-map phl paste_hardlink
-map pht paste_hardlinked_subtree
+map   =     chmod
+map   A     eval fm.open_console('rename ' + fm.thisfile.relative_path)
+map   I     eval fm.open_console('rename ' + fm.thisfile.relative_path, position=7)
+map   aa    rename_append
+map   cw    console rename%space
+map   pL    paste_symlink relative=True
+map   pO    paste overwrite=True append=True
+map   pP    paste append=True
+map   phl   paste_hardlink
+map   pht   paste_hardlinked_subtree
+map   pl    paste_symlink relative=False
+map   po    paste overwrite=True
+map   pp    paste
 
 map dD console delete
 
