--- a/.mkshrc
+++ b/.mkshrc
@@ -43,14 +43,14 @@ _prompt() {
 # ––– •Style END here• –––
 
 # ––– •Export START here• –––
-BROWSER=qutebrowser
+BROWSER=xlinks2
 BROWSERCLI=links2
 EDITOR=emacsclient
 GEM_HOME=$HOME/.gem
 GEM_HOME=$HOME/.gem
 GOPATH=$HOME/.go/pkg
 GOROOT=$HOME/.go
-IMAGEVIEWER=meh
+# IMAGEVIEWER=meh
 PAGER=less
 PATH="$(ruby -e 'print Gem.user_dir')/bin:$PATH"
 PATH=$HOME/.cargo/bin:$PATH
@@ -61,7 +61,6 @@ VIDEOPLAYER=mpv
 VISUAL=$EDITOR
 
 export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GOROOT GEM_HOME GOPATH PATH
-
 #export _JAVA_AWT_WM_NONREPARENTING=1   # FOR NAND2Tetris course, cuz Java GUI suck
 
 # Add color in manpages for less
