New Year Update

--- a/.mkshrc
+++ b/.mkshrc
@@ -59,9 +59,10 @@ PATH=$PATH:$HOME/.go/bin:$(ruby -e 'print Gem.user_dir')/bin:/home/master/.local
 READER=okular
 VIDEOPLAYER=mpv
 VISUAL=$EDITOR
+FZF_DEFAULT_COMMAND='rg --files'
 
-export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GOROOT GEM_HOME GOPATH PATH
-#export _JAVA_AWT_WM_NONREPARENTING=1   # FOR NAND2Tetris course, cuz Java GUI suck
+export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GOROOT GEM_HOME GOPATH PATH FZF_DEFAULT_COMMAND
+export _JAVA_AWT_WM_NONREPARENTING=1   # cuz Java GUI suck
 
 # Add color in manpages for less
 export LESS_TERMCAP_mb=$'\E[01;31m'
