--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,6 @@ setw -g pane-base-index 0
 
 # Automatically set window title
 set-window-option -g automatic-rename on
-#set-option -g set-titles on
 
 # Clock
 setw -g clock-mode-style 24
@@ -36,8 +35,17 @@ set -g prefix C-a
 bind-key Space send-prefix
 
 # still open if terminal close
-set -g set-remain-on-exit on
+#set -g set-remain-on-exit on
 
+#########################################
+## Status bar design
+#########################################
+# status line
+#set -g status-utf8 on
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
 #########################################
 ## Keybind ##############################
 #########################################
@@ -102,7 +110,7 @@ bind-key -n M-p select-window -t 10
 new-session -d -n def clear
 new-window -n Info
 new-window -n Shell
-new-window -n Ranger ranger
+new-window -n Ranger
 selectw -t 2
 
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
