--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -138,11 +138,11 @@ copymap   J  <C-D>
 copymap   K  <C-U>
 
 # Jumping around
-map H     history_go -1
-map L     history_go 1
-map ]     move_parent 1
-map [     move_parent -1
-map }     traverse
+map H history_go -1
+map L history_go 1
+map [ move_parent -1
+map ] move_parent 1
+map } traverse
 
 #DEFAULT MOVEMENT
 #map gL cd -r %f
@@ -151,7 +151,6 @@ map }     traverse
 #map ge cd /etc
 #map gl cd -r .
 #map gu cd /usr
-#map gv cd /var
 map g? cd /usr/share/doc/ranger
 map gD cd ~/Downloads
 map gd cd ~/Documents
@@ -159,6 +158,7 @@ map gh cd ~/
 map gp cd ~/Pictures
 map gr cd /
 map gt cd /tmp
+map gv cd ~/Videos
 
 # Tabs
 #map gT        tab_move -1
