--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
 
  <alias>
     <family>serif</family>
-    <prefer><family>Tinos</family></prefer>
+    <prefer><family>GaramondNo8</family></prefer>
   </alias>
   <alias>
     <family>sans-serif</family>
@@ -16,9 +16,7 @@
   </alias>
   <alias>
     <family>monospace</family>
-    <prefer><family>Tamzen</family></prefer>
+    <prefer><family>GoMono Nerd Font</family></prefer>
   </alias>
 
 </fontconfig>
-
-
