--- a/.mkshrc
+++ b/.mkshrc
@@ -51,6 +51,7 @@ GEM_HOME=$HOME/.gem
 GOPATH=$HOME/.go/pkg
 GOROOT=$HOME/.go
 # IMAGEVIEWER=meh
+RUST_SRC_PATH=$HOME/.cargo/bin/
 PAGER=less
 PATH="$(ruby -e 'print Gem.user_dir')/bin:$PATH"
 PATH=$HOME/.cargo/bin:$PATH
@@ -61,7 +62,7 @@ VIDEOPLAYER=mpv
 VISUAL=$EDITOR
 FZF_DEFAULT_COMMAND='rg --files'
 
-export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GOROOT GEM_HOME GOPATH PATH FZF_DEFAULT_COMMAND
+export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GOROOT GEM_HOME GOPATH PATH FZF_DEFAULT_COMMAND RUST_SRC_PATH
 export _JAVA_AWT_WM_NONREPARENTING=1   # cuz Java GUI suck
 
 # Add color in manpages for less
