--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -74,6 +74,7 @@ ext x?html?, has seamonkey,      X, flag f = seamonkey -- "$@"
 ext x?html?, has iceweasel,      X, flag f = iceweasel -- "$@"
 ext x?html?, has epiphany,       X, flag f = epiphany -- "$@"
 ext x?html?, has konqueror,      X, flag f = konqueror -- "$@"
+ext x?html?, has libreoffice,    X, flag f = libreoffice "$@"
 ext x?html?, has elinks,          terminal = elinks "$@"
 ext x?html?, has links2,          terminal = links2 "$@"
 ext x?html?, has links,           terminal = links "$@"
