--- a/.mkshrc
+++ b/.mkshrc
@@ -51,7 +51,7 @@ GEM_HOME=$HOME/.gem
 GOPATH=$HOME/.go/pkg
 GOROOT=$HOME/.go
 # IMAGEVIEWER=meh
-RUST_SRC_PATH=$HOME/.cargo/bin/
+RUST_SRC_PATH=$HOME/.rustup/toolchains/nightly-2019-01-18-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/src/
 PAGER=less
 PATH="$(ruby -e 'print Gem.user_dir')/bin:$PATH"
 PATH=$HOME/.cargo/bin:$PATH
