--- a/.mkshrc
+++ b/.mkshrc
@@ -45,11 +45,11 @@ _prompt() {
 # ––– •Export START here• –––
 BROWSER=xlinks2
 BROWSERCLI=links2
-EDITOR=emacsclient
+EDITOR=nvim
 GEM_HOME=$HOME/.gem
 GEM_HOME=$HOME/.gem
-GOPATH=$HOME/.go/pkg
-GOROOT=$HOME/.go
+GOPATH=$HOME/.go
+GOROOT=/usr/local/go
 # IMAGEVIEWER=meh
 RUST_SRC_PATH=$HOME/.rustup/toolchains/nightly-2019-01-18-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/src/
 PAGER=less
@@ -61,8 +61,10 @@ READER=okular
 VIDEOPLAYER=mpv
 VISUAL=$EDITOR
 FZF_DEFAULT_COMMAND='rg --files'
+PLAN9=/home/master/Programs/plan9port export PLAN9
+PATH=$PATH:$PLAN9/bin export PATH
 
-export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GOROOT GEM_HOME GOPATH PATH FZF_DEFAULT_COMMAND RUST_SRC_PATH
+export PAGER BROWSERCLI READER IMAGEVIEWER VIDEOPLAYER EDITOR VISUAL BROWSER GEM_HOME PATH FZF_DEFAULT_COMMAND RUST_SRC_PATH GOROOT GOPATH
 export _JAVA_AWT_WM_NONREPARENTING=1   # cuz Java GUI suck
 
 # Add color in manpages for less
