--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -19,4 +19,16 @@
     <prefer><family>GoMono Nerd Font</family></prefer>
   </alias>
 
+ <match>
+  <test name="lang" compare="contains">
+   <string>ar</string>
+  </test>
+  <test name="family">
+   <string>sans-serif</string>
+  </test>
+  <edit name="family" mode="prepend">
+   <string>Amiri</string>
+  </edit>
+ </match>
+
 </fontconfig>
