--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -76,7 +76,7 @@ ext x?html?, has epiphany,       X, flag f = epiphany -- "$@"
 ext x?html?, has konqueror,      X, flag f = konqueror -- "$@"
 ext x?html?, has libreoffice,    X, flag f = libreoffice "$@"
 ext x?html?, has elinks,          terminal = elinks "$@"
-ext x?html?, has links2,          terminal = links2 "$@"
+ext x?html?, has links2,          terminal = links2 -g "$@"
 ext x?html?, has links,           terminal = links "$@"
 ext x?html?, has lynx,            terminal = lynx -- "$@"
 ext x?html?, has w3m,             terminal = w3m "$@"
