--- a/.mkshrc
+++ b/.mkshrc
@@ -49,13 +49,14 @@ FZF_DEFAULT_COMMAND='rg --files'
 GEM_HOME=$HOME/.gem
 GEM_HOME=$HOME/.gem
 GOPATH=$HOME/.go
+KOTLINBIN=/home/master/.sdkman/candidates/kotlin/current/bin/
 GOROOT=/usr/local/go
 PAGER=less
 PATH="$(ruby -e 'print Gem.user_dir')/bin:$PATH"
 PATH=$HOME/.cargo/bin:$PATH
 PATH=$PATH:$GOROOT/bin
 PATH=$PATH:$HOME/.go/bin:$(ruby -e 'print Gem.user_dir')/bin:/home/master/.local/bin/
-PATH=$PATH:$PLAN9/bin export PATH
+PATH=$PATH:$PLAN9/bin:$KOTLINBIN export PATH
 PLAN9=/home/master/Programs/plan9port export PLAN9
 READER=zathura
 RUST_SRC_PATH=$HOME/.rustup/toolchains/nightly-2019-01-18-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/src/
