--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -19,7 +19,8 @@ font_size 10
 #: separated by hyphens. symbol_map itself can be specified multiple
 #: times. Syntax is::
 #:     symbol_map codepoints Font Family Name
-symbol_map U+0600-U+06FF,U+0750-U+077F,U+08A0-U+08FF,U+FB50-U+FDFF,U+FE70-U+FEFF,U+1EE00-U+1EEFF Amiri Typewriter
+#symbol_map U+0600-U+06FF,U+0750-U+077F,U+08A0-U+08FF,U+FB50-U+FDFF,U+FE70-U+FEFF,U+1EE00-U+1EEFF Amiri Typewriter
+symbol_map U+0600-U+06FF Amiri Typewriter
 
 
 disable_ligatures never
@@ -343,8 +344,8 @@ cursor_shape block
 
 #: Color scheme {{{
 
-background #282828
-foreground #d4be98
+background #1d2021
+foreground #fbf1c7
 
 selection_background #d4be98
 selection_foreground #282828
