--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 #: Fonts {{{
 #: To get a full list of supported fonts use the `kitty list-fonts` command.
-font_family      DejaVu Sans Mono
+font_family      IBM Plex Mono Medium
 bold_font        Go Mono Bold
 italic_font      CMU Typewriter Text Italic
 bold_italic_font auto
