--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -2,33 +2,48 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
 
- <alias>
+  <alias>
     <family>serif</family>
     <prefer><family>GaramondNo8</family></prefer>
   </alias>
+
   <alias>
     <family>sans-serif</family>
-    <prefer><family>Arimo</family></prefer>
+    <prefer><family>DejaVu Sans Mono</family></prefer>
   </alias>
+
   <alias>
     <family>sans</family>
-    <prefer><family>Arimo</family></prefer>
+    <prefer><family>DejaVu Sans Mono</family></prefer>
   </alias>
+
   <alias>
     <family>monospace</family>
     <prefer><family>GoMono Nerd Font</family></prefer>
   </alias>
 
- <match>
-  <test name="lang" compare="contains">
-   <string>ar</string>
-  </test>
-  <test name="family">
-   <string>sans-serif</string>
-  </test>
-  <edit name="family" mode="prepend">
-   <string>Amiri</string>
-  </edit>
- </match>
+  <match>
+    <test name="lang" compare="contains">
+      <string>ar</string>
+    </test>
+    <test name="family">
+      <string>sans-serif</string>
+    </test>
+    <edit name="family" mode="prepend">
+      <string>Amiri</string>
+    </edit>
+  </match>
+
+  <match target="font">
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+  </match>
+  
+  <match target="font">
+    <edit name="hinting" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
 
 </fontconfig>
