--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,9 +2,9 @@
 
 #: Fonts {{{
 #: To get a full list of supported fonts use the `kitty list-fonts` command.
-font_family      IBM Plex Mono Medium
+font_family      Go Mono
 bold_font        Go Mono Bold
-italic_font      CMU Typewriter Text Italic
+italic_font      Script12 BT Roman
 bold_italic_font auto
 
 #: Font size (in pts)
