--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -88,7 +88,7 @@ map   S      shell $SHELL
 map   cd     console cd%space
 map   f      console find%space
 map   i      display_file
-map   r      chain draw_possible_programs; console open_with%%space
+map   r      chain draw_possible_programs; console open_with
 map   w      taskview_open
 map   <C-c>  abort
 map   <C-r>  reset
